--- a/src/cmps/home/Home.css
+++ b/src/cmps/home/Home.css
@@ -2,12 +2,19 @@
     /* margin-top: 120px; */
     /* height: 300px; */
     padding-top: 130px;
-    padding-bottom: 100px;
+    /* padding-bottom: 100px; */
     /* position: absolute; */
 }
 
 .home-img {
+    background-repeat: no-repeat;
+    background-attachment: scroll;
+    background-position: center center;
+    background-size: cover;
     width: 100%;
+    height: 500px;
+    z-index: 1;
+    opacity: 0.5;
 }
 .home-container {
     height: 500px;
