--- a/src/cmps/portfolio/Portfolio.css
+++ b/src/cmps/portfolio/Portfolio.css
@@ -1,3 +1,16 @@
+.portfolio {
+}
+
 .portfolio-list {
+    /* margin: auto; */
     flex-wrap: wrap;
+    justify-content: center;
+}
+
+.portfolio>h1 {
+    color: #9a5a22;
+    text-shadow: 3px 1px 0px #c7bebe;
+    font-style: italic;
+    margin: 40px auto;
+    padding-top: 140px;
 }
