--- a/src/cmps/projectPreview/ProjectPreview.css
+++ b/src/cmps/projectPreview/ProjectPreview.css
@@ -1,8 +1,91 @@
 .project-preview {
-    border: 1px solid;
+    border: 1px solid #e2d7d7;
+    background-color: #efefef;
+    box-shadow: 1px 1px 20px 2px #4e4d4d;
+    width: 350px;
+    height: 440px;
+    justify-content: space-between;
+    align-items: center;
+    margin: 15px 25px;
+    position: relative;
 }
 
 .a-img {
-    width: 200px;
-    height: 200px;
+    width: 250px;
+    height: 190px;
+    background-size: cover; 
+    background-position: center; 
+    background-repeat: no-repeat;
+    /* position: absolute; */
+    top: 55px;
+    left: 50px;
+    margin-bottom: 20px;
+}
+
+.project-title {
+    height: 50px;
+}
+.project-name {
+    font-size: 20px;
+    font-weight: bold;
+    align-items: center;
+    margin-right: 5px;
+}
+
+.project-title>p {
+    align-self: center;
+}
+
+.links {
+    /* position: absolute; */
+    bottom: 15px;
+    left: 50px;
+    margin: 10px auto;
+    /* margin-bottom: 20px; */
+}
+
+.links>a {
+    border: 1px solid #dcc3c3;
+    background-color: #4e4747d9;
+    color: white;
+    width: 70px;
+    padding: 4px;
+    margin: 0 10px;
+    text-decoration: none;
+    /* border-radius: 4px; */
+}
+
+.links>a:hover {
+    background-color: black;
+}
+
+.ul-labels {
+    /* position: absolute; */
+    bottom: 50px;
+    left: 0px;
+    overflow-x: auto;
+    font-size: 0.75em;
+    padding: 0;
+    flex-wrap: wrap;
+    margin: auto;
+}
+
+.label {
+    border: 1px solid #dcc3c3;
+    list-style-type: none;
+    padding: 4px;
+    margin: 0 5px;
+    border-radius: 4px;
+    min-width: 50px;
+}
+
+.preview-bottom {
+    /* position: absolute; */
+    bottom: 10px;
+    /* left: 0px; */
+}
+
+.desc {
+    height: 70px;
+    padding: 0 10px;
 }
