--- a/src/cmps/home/Home.css
+++ b/src/cmps/home/Home.css
@@ -1,9 +1,5 @@
 .home {
-    /* margin-top: 120px; */
-    /* height: 300px; */
     padding-top: 130px;
-    /* padding-bottom: 100px; */
-    /* position: absolute; */
 }
 
 .home-img {
@@ -14,13 +10,13 @@
     width: 100%;
     height: 500px;
     z-index: 1;
-    opacity: 0.5;
+    opacity: 0.35;
 }
 .home-container {
     height: 500px;
     width: 100%;
     padding-top: 20px;
-    color: #9a5a22;
+    color: #6a3014;
     z-index: 3;
     position: absolute;
     top: 118px;
