--- a/src/cmps/about/About.css
+++ b/src/cmps/about/About.css
@@ -5,8 +5,8 @@
 }
 
 .about>h1 {
-    color: #6a3014;
-    text-shadow: 3px 1px 0px #c7bebe;
+    color: #d27019;
+    /* text-shadow: 3px 1px 0px #c7bebe; */
     font-style: italic;
     padding-top: 140px;
 }
