--- a/src/cmps/contact/Contact.css
+++ b/src/cmps/contact/Contact.css
@@ -9,8 +9,8 @@
 }
 
 .contact>h1 {
-    color: #6a3014;
-    text-shadow: 3px 1px 0px #c7bebe;
+    color: #d27019;
+    /* text-shadow: 3px 1px 0px #c7bebe; */
     font-style: italic;
     margin: 40px auto;
     padding-top: 140px;
@@ -45,4 +45,16 @@
 }
 .phone-container {
     margin-bottom: 50px;
+}
+
+@media (max-width: 600px) {
+    .link>p, .phone {
+        font-size: 15px;
+    }
+    .contact-list {
+        padding: 10px;
+    }
+    .contact>h3 {
+        padding: 10px;
+    }
 }
