--- a/src/cmps/portfolio/Portfolio.css
+++ b/src/cmps/portfolio/Portfolio.css
@@ -8,8 +8,8 @@
 }
 
 .portfolio>h1 {
-    color: #6a3014;
-    text-shadow: 3px 1px 0px #c7bebe;
+    color: #d27019;
+    /* text-shadow: 3px 1px 0px #c7bebe; */
     font-style: italic;
     margin: 40px auto;
     padding-top: 140px;
