delete movies url

--- a/src/cmps/header/Header.css
+++ b/src/cmps/header/Header.css
@@ -158,4 +158,13 @@ a:active {
     .navbar-toggler {
         display: flex;
     }
+    .a-link>img {
+        height: 100px;
+    }
+    .header {
+        height: 105px;
+    }
+    .nav-mobile {
+        top: 100px;
+    }
 }
