--- a/src/cmps/home/Home.css
+++ b/src/cmps/home/Home.css
@@ -47,3 +47,17 @@
     align-items: center;
     margin: auto 20px;
 }
+
+@media (max-width: 600px) {
+    .home {
+        padding-top: 105px;
+    }
+    .home-container {
+        padding-top: 0px;
+        top: 105px;
+        height: 480px;
+    }
+    .home-img {
+        height: 470px;
+    }
+}
