--- a/src/cmps/about/About.css
+++ b/src/cmps/about/About.css
@@ -39,13 +39,14 @@
     margin-bottom: 25px;
 }
 .cv {
-    text-decoration: none;
     color: inherit;
-    font-size: 1.2em;
+    font-size: 15px;
+    text-decoration: underline;
 }
 .bold {
     font-weight: bold;
 }
+
 @media (max-width: 600px) {
     .about {
         width: 85%;
